--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-spring/web": "^9.7.5",
     "framer-motion": "^11.11.9",
     "matter-js": "^0.20.0",
+    "prime-react": "^1.0.0",
+    "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
