--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-spring/web": "^9.7.5",
     "framer-motion": "^11.11.9",
+    "i18next": "^24.0.5",
     "matter-js": "^0.20.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
     "react-typewriter-effect": "^1.1.0",
     "react-use-gesture": "^9.1.3",
