--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.1.1",
     "react-typewriter-effect": "^1.1.0",
     "react-use-gesture": "^9.1.3",
     "styled-components": "^6.1.13"
